# microstrain_mag_cal

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cd.yml  ci.yml
app/: CMakeLists.txt  PROOFS_COMBINED_CALIBRATION.md  README.md  USAGE_GUIDE.md
app/microstrain_mag_cal/: CMakeLists.txt  app.cpp  app.hpp  backend.cpp  backend.hpp  cli.cpp  cli.hpp  main.cpp
app/microstrain_mag_cal_apply/: CMakeLists.txt  backend.cpp  backend.hpp  cli.cpp  cli.hpp  main.cpp
app/test/: CMakeLists.txt  app.unit.cpp  backend.unit.cpp
application/: CMakeLists.txt  README.md  application.cpp  placeholder.cpp
application/scripts/: CMakeLists.txt  apply_calibration.cpp
application/src/: CMakeLists.txt  application.cpp  cli.cpp  core.cpp  core.hpp  mag_cal_core.cpp  mag_cal_core.hpp
application/test/: CMakeLists.txt  app_core.unit.cpp  mvp.unit.cpp
cmake/: git_version.cmake
ic_reference/: from_inertial_connect.cpp  from_inertial_connect.hpp
lib/: CMakeLists.txt  README.md  USAGE_GUIDE.md
lib/mag_cal_core/: CMakeLists.txt  analysis.cpp  analysis.hpp  calibration.cpp  calibration.hpp  preprocessing.cpp  preprocessing.hpp
lib/microstrain_mag_cal/: CMakeLists.txt  analysis.cpp  analysis.hpp  apply.cpp  calibration.cpp  calibration.hpp  preprocessing.cpp  preprocessing.hpp
lib/microstrain_mag_cal_apply/: CMakeLists.txt  combined_coefficients.cpp  combined_coefficients.hpp  composed_coefficients.cpp  composed_coefficients.hpp
lib/test/: CMakeLists.txt  analysis.unit.cpp  apply.unit.cpp  calibration.unit.cpp  clean_data.hpp  combined_coefficients.unit.cpp  preprocessing.unit.cpp  shared_fixtures.hpp
lib/test/data_generation/: README.md
lib/test/data_generation/scripts/: generate_clean_data.py
src/: CMakeLists.txt  microstrain_mag_cal.cpp  microstrain_mag_cal.hpp
test/: CMakeLists.txt  library.unit.cpp  mvp.unit.cpp
